fix video background image on iphone

--- a/sass/modules/_longform.sass
+++ b/sass/modules/_longform.sass
@@ -99,6 +99,15 @@ $longform-header-max-height: 1400px
     top: 0
     left: 0
     width: 100%
+    &.video--fallback
+      position: absolute
+      top: 0
+      left: -50%
+      right: 0
+      bottom: 0
+      margin: auto
+      min-width: 200%
+      min-height: 100%
 
   .article__main-video--longform
     overflow: hidden
